# ResearchPocket

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bookmarklet.js  rustfmt.toml  tailwind.config.js
.github/workflows/: cargo-release.yml  ci-biulds.yml  gh-builds.yml  publish-release.yml  release-builds.yml
assets/: main.css  search.js  types.d.ts
cli/: Cargo.toml
cli/migrations/: 0000_db_tables.sql
cli/src/: main.rs
cli/src/assets/: css.rs
cli/src/db/: mod.rs
cli/src/provider/: mod.rs  pocket.rs
cli/src/providers/: mod.rs  pocket.rs
cli/src/site/: components.rs  mod.rs
cli/src/util/: env.rs  mod.rs
cli/templates/: index.stpl
cli/templates/components/: header.stpl
css/: dist.css
migrations/: 0000_db_tables.sql  0001_add_providers.sql  0002_create_user.sql  0003_add_notes.sql
src/: cli.rs  main.rs
src/assets/: css.rs
src/db/: mod.rs
src/handler/: mod.rs  register.rs  unregister.rs
src/provider/: mod.rs  pocket.rs
src/provider/local/: mod.rs
src/provider/pocket/: api.rs  mod.rs
src/site/: mod.rs
src/util/: mod.rs  serialize.rs
templates/: index.stpl  search.stpl
templates/components/: header.stpl  item_tags.stpl
