[package]
name = "research"
version = "0.1.11"
edition = "2021"
keywords = ["ssg", "save-it-later", "reading-list", "pocket"]
categories = ["command-line-utilities"]
authors = ["KorigamiK <korigamik.is-a.dev>"]
license = "Apache-2.0"
repository = "https://github.com/KorigamiK/ResearchPocket"
description = "Manage your reading lists and generate a static site with your saved articles."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "env", "derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
sailfish = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"
