[package]
name = "cli"
version = "0.1.0"
edition = "2021"
keywords = ["static-site-generator", "reading-list", "pocket"]
categories = ["cli", "static-site-generator"]
authors = ["KorigamiK <korigamik.is-a.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axohtml = "0.5.0"
chrono = "0.4"
clap = { version = "4.4.18", features = ["cargo"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"
